package-examples/ghost/ghost-app/deployment-ghost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-app
  namespace: example
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      affinity:
        podAffinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                namespaces:
                  - "example"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
      securityContext:
        fsGroup: 1001
      containers:
        - name: ghost-app
          image: docker.io/bitnami/ghost:4.45.0-debian-10-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: http
              containerPort: 2368
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: "http"
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: "http"
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6
            successThreshold: 1
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: ghost-data
              mountPath: /bitnami/ghost
      volumes:
        - name: ghost-data
          persistentVolumeClaim:
            claimName: ghost-app
