package-examples/ghost/ghost-app/service-ghost.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-app
  namespace: example
  labels:
    app.kubernetes.io/name: ghost-app
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: ghost-app
