package-examples/ghost/ghost-app/ingress-ghost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-app
  namespace: example
spec:
  rules:
    - host: ghost.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ghost-app
                port:
                  name: http
