package-examples/ghost/ghost-app/networkpolicy-ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ghost-app
spec:
  ingress:
